--- a/wp-content/themes/ignis/icons/css/fontello.css
+++ b/wp-content/themes/ignis/icons/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.eot?13511156');
-  src: url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.eot?13511156#iefix') format('embedded-opentype'),
-       url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.woff2?13511156') format('woff2'),
-       url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.woff?13511156') format('woff'),
-       url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.ttf?13511156') format('truetype'),
-       url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.svg?13511156#fontello') format('svg');
+  src: url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.eot?13511156');
+  src: url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.eot?13511156#iefix') format('embedded-opentype'),
+       url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.woff2?13511156') format('woff2'),
+       url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.woff?13511156') format('woff'),
+       url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.ttf?13511156') format('truetype'),
+       url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.svg?13511156#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('http://pierrejeanliard.wordpress.com/wp-content/themes/ignis/icons/font/fontello.svg?13511156#fontello') format('svg');
+    src: url('http://pjliard.github.io/pierrejeanliard/wp-content/themes/ignis/icons/font/fontello.svg?13511156#fontello') format('svg');
   }
 }
 */
